--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -2,7 +2,7 @@ include /components/material-icon-cell/material-icon-cell.pug
 include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin inputDatePicker( item )
-  input.input__frame.expander( id=item.id placeholder="ДД.ММ.ГГГГ" data-hierarchy=item.hierarchy readonly  )
+  input.input__frame.expander.adp( class=item.hierarchy id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
   .input__icon_expand
     +materialIcon('expand_more', item.id )
   if ( item.hierarchy !== 'slave' )
