--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -2,11 +2,11 @@ include /components/material-icon-cell/material-icon-cell.pug
 include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin inputDatePicker( item )
-  input.input__frame.expander.adp( class=item.hierarchy id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
+  input.input__frame.expander.adp( id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
   .input__icon_expand
     +materialIcon('expand_more', item.id )
   if ( item.hierarchy !== 'slave' )
-    .input__date-picker.expander__aim( id=`dp-${item.id}` )
+    .input__date-picker.expander__aim( class=item.hierarchy id=`dp-${item.id}` )
       .date-picker__element
       .date-picker__buttons
         +meanOvalButtons({
