--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -9,7 +9,7 @@ mixin checkboxList( item )
   .checkbox-list.expander__parent
     .checkbox-list__title
       if !(item.disabled)
-        input.checkbox-list__title_button.expander( type='checkbox' id=item.groupname )
+        input.checkbox-list__title_button.expander( type='checkbox' id=item.groupname checked=item.expanded )
       .checkbox-list__title_text
         +titleBar( item.title )
       .checkbox-list__title_icon( class=iconFlippedClass )
