--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -21,14 +21,14 @@ mixin cardRoomBooking()
           id: "room-booking__date-picker_arrival",
           type: "date-picker",
           title: "прибытие",
-          placeholder: "ДД.ММ.ГГГГ",
+          hierarchy: "master",
           widthbypercent: 47,
         })
         +input({
           id: "room-booking__date-picker_departure",
           type: "date-picker",
           title: "выезд",
-          placeholder: "ДД.ММ.ГГГГ",
+          hierarchy: "slave",
           widthbypercent: 47,
         })
 
