Date picker is under refactoring 28

--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -74,14 +74,15 @@ block main
               title: "date dropdown",
               hierarchy: "slave",
               widthbypercent: 47,
+              dates: ", 2019-08-23"
             })
       .form-elements__block.block__dropdowns_date-semi-wide
         +input({
           id: "uik-fe__semi-wide_01",
           type: "date-picker",
           title: "filter date dropdown",
-          placeholder: "19 авг - 23 авг",
           widthbypercent: 83,
+          dates: "2019-08-19, 2019-08-23"
         })
       .form-elements__block.block__inputs_subscribe
         +input({
