--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -5,7 +5,7 @@ mixin inputDatePicker( item )
   input.input__frame.expander.adp( id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
   .input__icon_expand
     +materialIcon('expand_more', item.id )
-  .input__date-picker.expander__aim( class=item.hierarchy id=`dp-${item.id}` )
+  .input__date-picker.expander__aim( class=item.hierarchy id=`dp-${item.id}` data-dates=item.dates )
     if ( item.hierarchy !== 'slave' )
       .date-picker__element
       .date-picker__buttons
