--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -65,16 +65,14 @@ block main
               id: "uik-fe__date-twins_arrival",
               type: "date-picker",
               title: "date dropdown",
-              hierarchy: "master",
               widthbypercent: 47,
             })
             +input({
               id: "uik-fe__date-twins_departure",
               type: "date-picker",
               title: "date dropdown",
-              hierarchy: "slave",
               widthbypercent: 47,
-              dates: " , 2019-08-23"
+              dates: "2019-08-23"
             })
       .form-elements__block.block__dropdowns_date-semi-wide
         +input({
