Date picker is under refactoring 33: Fixed fundamental bugs of non-sent data within non-relative date-picker

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -21,6 +21,7 @@ mixin cardFindRoom()
           title: "выезд",
           hierarchy: "slave",
           widthbypercent: 47,
+          dates: "2019-08-19, 2019-08-23"
         })
 
     .find-room__container_guests-dropdown
