Adjusting input falues of ui-kit__cards page

--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -30,6 +30,7 @@ mixin cardRoomBooking()
           title: "выезд",
           hierarchy: "slave",
           widthbypercent: 47,
+          dates: "2019-08-19, 2019-08-23"
         })
 
     .room-booking__container_guests-input
