--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -28,10 +28,11 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     padding: 0px 15px 0px 15px;
     width: inherit;
     background-color: transparent;
+    font-family: inherit;
+    font-size: 14px;
 
     &::placeholder {
       color: $default-color;
-      font-size: 14px;
       line-height: 24px;
     }
 
