--- a/src/pages/website/__search/website__search.pug
+++ b/src/pages/website/__search/website__search.pug
@@ -133,8 +133,8 @@ block main
             id: "search-by__date",
             type: "date-picker",
             title: "дата пребывания в отеле",
-            placeholder: "19 авг - 23 авг",
-            widthbypercent: 83
+            widthbypercent: 83,
+            dates: "2019-08-19, 2019-08-23"
           })
         .search-page__guests
           +input({
