Added new page hyperlink to index page"s website links list

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -38,6 +38,7 @@ block main
           { name: "login",        href: "website__login.html" },
           { name: "registration", href: "website__registration.html" },
           { name: "room",         href: "website__room.html" },
-          { name: "search",       href: "website__search.html" }
+          { name: "search",       href: "website__search.html" },
+          { name: "not found",    href: "website__no-page.html" }
         ]
       })
