--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -2,10 +2,12 @@ include /components/material-icon-cell/material-icon-cell.pug
 include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin inputDatePicker( item )
-  input.input__frame.expander.adp( id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
+  - const activeClass = item.active ? 'expander_active' : ''
+
+  input.input__frame.expander.adp-frame( id=item.id placeholder="ДД.ММ.ГГГГ" readonly )
   .input__icon_expand
     +materialIcon('expand_more', item.id )
-  .input__date-picker.expander__aim( class=item.hierarchy data-dates=item.dates )
+  .input__date-picker.expander__aim( class=[item.hierarchy, activeClass] data-dates=item.dates )
     if ( item.hierarchy !== 'slave' )
       .date-picker__element
       .date-picker__buttons
