Minor import mistake fix

--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -1,4 +1,5 @@
 @import "/node_modules/air-datepicker/air-datepicker.css";
+@import "/src/components/components.scss";
 @import "@variables";
 
 $cell-size: 40px;
