--- a/src/components/card/__date-picker/card__date-picker.pug
+++ b/src/components/card/__date-picker/card__date-picker.pug
@@ -1,7 +1,7 @@
 include /components/date-picker/date-picker.pug
 
-mixin cardDatePicker
-  .date-picker.expander__parent
-    .adp-frame(  )
-    .expander__aim( data-dates="2019-08-19, 2019-08-23" )
-      +datePicker("uik-cards__date-picker")
+mixin cardDatePicker( item={} )
+  .card-date-picker.expander__parent
+    .card-date-picker__frame.adp-frame
+    .card-date-picker__aim.expander__aim( data-dates=item.dates )
+      +datePicker( item.id )
