Added new color function to central text of votes chart

--- a/src/components/votes-chart/votes-chart.scss
+++ b/src/components/votes-chart/votes-chart.scss
@@ -67,7 +67,7 @@
   @mixin svgGradient( $suffix, $start-color, $end-color ) {
     &__#{ $suffix } {
       &_start {
-        color: $start-color;
+        color: mix( $start-color, $end-color );
         stop-color: $start-color;
       }
       &_end {
