--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -6,7 +6,7 @@ mixin inputDropdown( item )
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
 
-  input.input__frame.dropdown.expander( id=item.id placeholder=item.placeholder checked=dropdown.expanded readonly )
+  input.input__frame.dropdown.expander( id=item.id placeholder='Сколько гостей' checked=dropdown.expanded readonly )
   .input__icon_expand( class=iconFlippedClass )
     +materialIcon('expand_more', item.id )
   .input__dropdown.expander__aim( class=expanderActiveClass )
