adjusted input dropdown parameters

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -30,11 +30,7 @@ mixin cardFindRoom()
         title: "гости",
         placeholder: "Сколько гостей",
         dropdown: {
-          options: [
-              { name: "взрослые", count: 0 },
-              { name: "дети",     count: 0 },
-              { name: "младенцы", count: 0 }
-          ]
+          type: "guests"
         }
       })
 
