--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -19,7 +19,7 @@ $optionButtonSize: 30px;
   }
 
   &__option,
-  &__clear-n-submit {
+  &__state-controllers {
     display: flex;
     justify-content: space-between;
   }
