--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -180,6 +180,7 @@ block main
           widthbypercent: 83,
           dropdown: {
             type: "facilities",
+            values: [ 2, 1, 0 ],
           }
         })
         +input({
@@ -190,6 +191,7 @@ block main
           widthbypercent: 83,
           dropdown: {
             type: "facilities",
+            values: [ 2, 1, 0 ],
             expanded: true
           }
         })
