Option name fix

--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -3,7 +3,7 @@ include /components/button/__mean-oval/button__mean-oval.pug
 
 mixin inputDropdown( item={} )
   - const guestsOptionNames = [ 'взрослые', 'дети', 'младенцы' ]
-  - const facilitiesOptionNames = [ 'спальни', 'кровати', 'ванные' ]
+  - const facilitiesOptionNames = [ 'спальни', 'кровати', 'ванные комнаты' ]
 
   - const dropdown = item.dropdown || {}
   - const values = dropdown.values || [ 0, 0, 0 ]
