--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -7,12 +7,14 @@ mixin inputDropdown( item={} )
 
   - const dropdown = item.dropdown || {}
   - const values = dropdown.values || [ 0, 0, 0 ]
+
+  - const options = dropdown.type === 'guests' ? guestsOptionNames : facilitiesOptionNames
+  - const placeholder = dropdown.type === 'guests' ? 'Cколько гостей' : 'Композиция номера'
+
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
-  - const placeholderByType = dropdown.type === 'guests' ? 'Cколько гостей' : 'Композиция номера'
-  - const options = dropdown.type === 'guests' ? guestsOptionNames : facilitiesOptionNames
 
-  input.input__frame.dropdown.expander( id=item.id placeholder=placeholderByType checked=dropdown.expanded readonly )
+  input.input__frame.dropdown.expander( id=item.id placeholder=placeholder checked=dropdown.expanded readonly )
   .input__icon_expand( class=iconFlippedClass )
     +materialIcon('expand_more', item.id )
   .input__dropdown.expander__aim( class=expanderActiveClass data-options-type=dropdown.type )
