input_dropdown is under refactoring 15: minor fixes

--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -9,7 +9,7 @@ mixin inputDropdown( item={} )
   - const values = dropdown.values || [ 0, 0, 0 ]
 
   - const options = dropdown.type === 'guests' ? guestsOptionNames : facilitiesOptionNames
-  - const placeholder = dropdown.type === 'guests' ? 'Cколько гостей' : 'Композиция номера'
+  - const placeholder = dropdown.type === 'guests' ? 'Cколько гостей' : 'Cколько ванных и спален'
 
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
