input_dropdown is under refactoring 17: restricted input value from being longer tnah 32 characters

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -27,7 +27,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     border-radius: 4px;
     border-color: $default-color;
     color: $focused-color_text;
-    background-color: transparent;
+    background-color: $white;
     font-family: inherit;
     font-size: 14px;
 
