Input and inner submixins is under reconstruction 1: rewrote and outcapsulated input__frame element from sub-mixins into general input mixin

--- a/src/components/input/_subscription/input_subscription.pug
+++ b/src/components/input/_subscription/input_subscription.pug
@@ -1,6 +1,5 @@
 include /components/material-icon-cell/material-icon-cell.pug
 
-mixin inputSubscription( item )
-  input.input__frame( type='Email' placeholder=item.placeholder disabled=item.disabled )
+mixin inputSubscription( id )
   .input__icon_subscribe
-    +materialIcon('arrow_forward', item.id)
+    +materialIcon('arrow_forward', id )
