Input codestyle fixes 2

--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -19,11 +19,11 @@ mixin input( item )
           break;
         }
         case 'dropdown': {
-          placeholderValue = dropdownType === 'guests' ? 'Cколько гостей' : 'Cколько ванных и спален'
+          placeholderValue = dropdownType === 'guests' ? 'Cколько гостей' : 'Cколько ванных и спален' ;
           break;
         }
         default: {
-          placeholderValue = placeholder
+          placeholderValue = placeholder;
         }
       }
       return placeholderValue;
