Input is under refactoring 3: Disarmed icon labels to prevent side-effects like onclick text selection

--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -12,8 +12,8 @@ mixin inputDropdown( item={} )
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
 
-  label.input__icon_expand( class=iconFlippedClass for=item.id )
-    +materialIcon('expand_more', item.id )
+  .input__icon_expand( class=iconFlippedClass )
+    +materialIcon('expand_more')
   .input__dropdown.expander__aim( class=expanderActiveClass data-options-type=dropdown.type )
     each option, index in options
       .input__option.custom-font-style_h3
