--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -29,7 +29,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
 
   &__frame {
     margin: 0;
-    padding: 0 15px;
+    padding: 0 34px 0 15px;
     height: 44px;
     width: inherit;
     border-radius: 4px;
@@ -76,16 +76,12 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       position: absolute;
       bottom: 10px;
       right: 10px;
+      background-color: $white;
       
       &,
       & > .material-icons {
         cursor: pointer;
       }
-    }
-
-    &_expand {
-      color: $focused-color_border-n-icon;
-      background-color: $white;
 
       &::before {
         $beforeSize: 24px;
@@ -96,6 +92,10 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
         background-image: linear-gradient(90deg, rgba($white, 0) 0%, rgba($white, 1) 100%);
         content: '';
       }
+    }
+
+    &_expand {
+      color: $focused-color_border-n-icon;
     }
   
     &_subscribe {
