--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -39,12 +39,8 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     font-family: inherit;
     font-size: 14px;
 
-    &.expander {
-      cursor: pointer;
-
-      &.dropdown[checked] {
-        border-radius:4px 4px 0px 0px;
-      }
+    &.expander.dropdown[checked] {
+      border-radius: 4px 4px 0px 0px;
     }
 
     &::placeholder {
@@ -57,15 +53,13 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
     &:focus-within,
     &[checked] {
       border-color: $focused-color_border-n-icon;
-
+Ы
       &::placeholder {
         color: $focused-color_text
       }
 
-      & + .input__icon_expand {
-        & > .material-icons{
-          color: $focused-color_text
-        }
+      & + .input__icon_expand > .material-icons {
+        color: $focused-color_text
       }
     }
   }
@@ -77,11 +71,6 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
       bottom: 10px;
       right: 10px;
       background-color: $white;
-      
-      &,
-      & > .material-icons {
-        cursor: pointer;
-      }
 
       &::before {
         $beforeSize: 24px;
@@ -89,7 +78,7 @@ $focused-color_border-n-icon: rgba($valhalla, .5);
         right: $beforeSize;
         width: $beforeSize;
         height: $beforeSize;
-        background-image: linear-gradient(90deg, rgba($white, 0) 0%, rgba($white, 1) 100%);
+        background-image: linear-gradient( 90deg, rgba( $white, 0 ) 0%, rgba( $white, 1 ) 100% );
         content: '';
       }
     }
