Preparing for dropdown-like controller adaptation of date-picker mixin

--- a/src/components/button/__mean-oval/button__mean-oval.scss
+++ b/src/components/button/__mean-oval/button__mean-oval.scss
@@ -110,8 +110,15 @@
   }
 }
 
-.mob_non-absolute {
-  position: relative;
+.mob {
+  &_non-absolute {
+    position: relative;
+  }
+
+  &_hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .ripple {
