--- a/src/components/card/__date-picker/card__date-picker.pug
+++ b/src/components/card/__date-picker/card__date-picker.pug
@@ -1,6 +1,6 @@
 include /components/date-picker/date-picker.pug
 
-mixin cardDatePicker( item={} )
+mixin cardDatePicker( item )
   .card-date-picker.expander__parent
     .card-date-picker__frame.adp-frame
     .card-date-picker__aim.card-style_room-sample.expander__aim( data-dates=item.dates )
